<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <PreferenceCategory
        android:title="@string/preference_general_category">

        <ListPreference
            android:key="@string/preference_location_key"
            android:title="@string/preference_location_label"
            android:summary="@string/preference_location_summary"
            android:dialogTitle="@string/preference_location_dialog_title"
            android:entries="@array/preference_location_entries"
            android:entryValues="@array/preference_location_values"
            android:defaultValue="@string/preference_location_default" />

        <ListPreference
            android:key="@string/preference_temperature_units_key"
            android:title="@string/preference_temperature_units_label"
            android:summary="@string/preference_temperature_units_summary"
            android:dialogTitle="@string/preference_temperature_units_dialog_title"
            android:entries="@array/preference_temperature_units_entries"
            android:entryValues="@array/preference_temperature_units_values"
            android:defaultValue="@string/preference_temperature_units_default"/>

    </PreferenceCategory>


</PreferenceScreen>